tests/ui/unstable-feature_bound/unstable-feature-bound-two-error.stderr
error[E0658]: use of unstable library feature `feat_bar`
  --> $DIR/unstable-feature-bound-two-error.rs:9:5
   |
LL |     Bar::foo();
   |     ^^^
   |
   = help: add `#![feature(feat_bar)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `Bar` to implement `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
